<resources>
    <string name="app_name">BookHolic</string>
    <string name="open_nav_drawer">Navigation Drawer Open</string>
    <string name="close_nav_drawer">Navigation Drawer Close</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">LOGIN</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text-  -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="books">All Books</string>
    <string name="read">Read</string>
    <string name="authors">Authors</string>
    <string name="liked_books">Liked Books</string>
    <string name="communication">Communication</string>
    <string name="upload_books">Upload Books</string>
    <string name="share_app">Share App</string>
    <string name="default_user">default user</string>
    <string name="user_name">User Name</string>
    <string name="email_address">Email Address</string>
    <string name="setting">Change Profile</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already Have An Account</string>
    <string name="need_new_account_sign_up">Need new Account? Sign Up</string>
    <string name="tap_to_load_photo">Tap to Select Photo (optional)</string>
    <string name="update">Update</string>
    <string name="updating">Update…</string>
    <string name="percentage">%</string>
    <string name="created">Started on</string>
    <string name="progress">Progress</string>
    <string name="book_name">Book Name</string>
    <string name="author_name">Author Name</string>
    <string name="book_description">Book Description</string>
    <string name="tags">Types</string>
    <string name="file_name">file_name</string>
    <string name="no_of_pages">No of Pages :</string>
    <string name="bookcoverimage">bookCoverImage</string>
    <string name="total_pages">Total Pages</string>
    <string name="date_added">Date Added</string>
    <string name="_8942">⋮</string>
    <string name="read_now">Read Now</string>
    <string name="private_book">PRIVATE BOOK</string>
    <string name="add_to_library">Add to library</string>
    <string name="about_book">About Book</string>
    <string name="delete">Delete</string>
    <string name="type">Type</string>
    <string name="book_image">Book Image</string>
    <string name="more_book_from">More Book from </string>
    <string name="no_books_in_library">No books found in Library</string>
    <string name="no_books_found">No books found !!</string>
    <string name="remove_from_library">Remove from Library</string>
    <string name="no_recent_books_found">No Recent books found</string>
    <string name="find_books">Find Books</string>
    <string name="out_of"> out of </string>
    <string name="progressPercentage">%</string>
    <string name="last_read_on">Last Read On</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="finished">Finished</string>
    <string name="likedbook">Liked Books</string>
    <string name="no_liked_books_found">No Liked Books Found !!</string>
    <string name="dark_mode">Night Mode</string>
    <string name="notification">Book Requests</string>
    <string name="search_hint">Search Books</string>
    <string name="silentMode">DND Mode</string>
    <string name="request_a_book">Request a Book</string>
    <string name="request">Request</string>
    <string name="asked_on">Requested on :</string>
    <string name="downbtn">downBtn</string>
    <string name="about_us">About Us</string>
    <string name="bookholic_ebook_reader">BookHolic | Ebook Reader</string>
    <string name="bookholic_ebook_reader_app">BookHolic | Ebook Reader App lets you read Books on the go. Choose from the 100s
     of the book posted by different Users. Read ,Keep progress of Read Book , Upload your Own book as Private or Public Visibility. </string>
    <string name="info">If you have Any problem with any book or removal of any book you can mail us. <b>Click Here</b></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="read_books_anywhere_anytime">Read Books Anywhere , Anytime</string>
    <string name="next">Next</string>
    <string name="get_started">Get started</string>
    <string name="skip">Skip</string>
    <string name="rate_now">Rate Now</string>
    <string name="click_here_to_upload_from_storage">Click here to upload from Storage</string>
    <string name="search">Search…</string>
    <string name="no_connection_illustrations_link">No Result Illustrations Link</string>
    <string name="no_result">No result</string>
    <string name="no_search_result">No Search Result!!</string>
    <string name="click_above_to_upload_cover_image_optional">Click Above to upload Cover Image(Optional)</string>
    <string name="rate_now_icon_by_freepik_click_here">Rate now icon by Freepik. Click Here</string>
    <string name="in_app_review">In App Review</string>

    <style name="Add_to_library">Add to Library</style>

</resources>