<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="#F4F3F6"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/face" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tap_to_load_photo"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/userNameUpdated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints="@string/name"
        android:backgroundTint="#ECE7B1"
        android:elevation="1dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textCapWords"
        android:lines="1"
        android:maxLines="1"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <Button
        android:id="@+id/updateUserData"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="35dp"
        android:backgroundTint="#0BB8EC"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textSize="15sp" />


</LinearLayout>