<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gopal.fragment.RecentReadFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recentReadRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/linearLayoutRecent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"
            android:contentDescription="@string/book_image"
            android:src="@drawable/nobooks" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/no_recent_books_found"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/findBooks"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="#8825B8A2"
            android:padding="10dp"
            android:text="@string/find_books"
            android:textAllCaps="false"
            android:textSize="16sp" />

    </LinearLayout>
</FrameLayout>